tree-sitter-lute/grammar.js
    source_file: ($) =>
      seq(
        optional($.frontmatter),
        repeat($._node),
        repeat(choice($.section, $.quest, $.entry, $.beat)),
      ),

    // ---- sections (dsl 0.37.0 §3.1) ----------------------------------------
    // Section ::= "## " Heading SectionId? Node*. Heading text is opaque to EOL
    // (no inline modifiers — those are content-line only, §3.6); the body
    // greedily absorbs nodes until the next `## ` heading or EOF.
    section: ($) =>
      seq("##", $.heading, optional($.section_id), repeat($._node)),

    // Heading text. Runs of literal text plus `{{…}}` interpolations (a heading
    // interpolation is a harmless editor over-recognition; the checker owns it).
    heading: ($) =>
      repeat1(choice($._heading_chunk, $._heading_special, $.escape, $.interpolation)),

    // A run of heading text: anything but a brace, a backslash, or a newline.
    // `prec(1)` beats the `comment` extra, as for content `_text_chunk`.
    _heading_chunk: ($) => token.immediate(prec(1, /[^{\\\r\n]+/)),

    // A lone `{` or `\` in a heading that opens neither `{{`, `{#`, nor an escape.
    _heading_special: ($) => token.immediate(/[{\\]/),

    // SectionId ::= "{#" Token "}" — the optional final heading suffix
    // (§3.1). One token; the 64-char bound and uniqueness are the checker's.
    section_id: ($) => token.immediate(/\{#[A-Za-z][A-Za-z0-9_-]*\}/),

    // A body Node (§7). A `## ` inside a section body starts the next section.
    _node: ($) =>
      choice(
        $.assert,
        $.retract,
        $.set,
        $.directive,
        $.line,
        $.branch,
        $.match,
        $.timeline,
        $.hub,
        $.on,
        $.objective,
      ),

    // ---- staging (leaf) ----------------------------------------------------
    // Set ::= "::set{" Path WS AssignOp WS CelExpr "}" (§7.3.4).
    directive: ($) => seq("::", $.ident, optional($.attrs)),

    // ---- content -----------------------------------------------------------
    // Line ::= "@" Speaker Attrs? ":" WS Text (§7.1). Text MAY interpolate (§7.6).
    // The leading marker is a single `@` (0.2.2, foundation C1 — was `:` in
    // 0.1.0/0.2.0); `::set{` and `::` are longer tokens on the SAME `:` prefix
    // family and are unaffected. A line only ever starts on `@` + a speaker
    // ident, which is positionally distinct from the inline `@ref` macro
    // (`ref` only ever appears as an attr VALUE, inside a `cel_string`, or
    // inside `{{…}}` — never at `_node` position), so no grammar conflict
    // arises between line-start `@` and expression-context `@ref`.
    line: ($) =>
      seq(
        "@",
        $.speaker,
        optional($.attrs),
        ":",
        optional($.text),
      ),

    // ---- logic blocks (nest) ----------------------------------------------
    // Branch ::= "<branch" Attrs ">" Choice+ "</branch>" (§7.3).
    branch: ($) =>
      seq(
        "<branch",
        repeat($._tag_attr),
        ">",
        repeat($.choice),
        "</branch>",
      ),

    // Choice ::= "<choice" Attrs ">" Node* "</choice>" (§7.3).
    choice: ($) =>
      seq(
        "<choice",
        repeat($._tag_attr),
        ">",
        repeat($._node),
        "</choice>",
      ),

    // ---- hub (nest; §7.3.2) -----------------------------------------------
    // Hub ::= "<hub" Attrs ">" (HubChoice | HubReturn)+ "</hub>" (§7.3.2,
    // dsl 0.28.0 §5). A revisit conversation that re-presents eligible
    // choices. `id` required; the `once`/`exit` flags and
    // `into`/`persist`/`value`/`when` sugar all ride the generic `_tag_attr`
    // machinery (bare-bool `once`/`exit`; string/ref values) — no new attr
    // vocabulary needed. At most one `<return>` is the checker's rule.
    hub: ($) =>
      seq(
        "<hub",
        repeat($._tag_attr),
        ">",
        repeat(choice($.hub_choice, $.hub_return)),
        "</hub>",
      ),

    // HubReturn ::= "<return>" Node* "</return>" (dsl 0.28.0 §5): the text
    // that runs each time an option hands control back to the hub.
    hub_return: ($) =>
      seq(
        "<return",
        repeat($._tag_attr),
        ">",
        repeat($._node),
        "</return>",
      ),

    // HubChoice ::= "<choice" Attrs ">" Node* "</choice>" (§7.3.2). Same surface
    // as a branch `choice`, but a distinct node so editors can tell a hub arm
    // (may carry `once`/`exit`) from a branch arm.
    hub_choice: ($) =>
      seq(
        "<choice",
        repeat($._tag_attr),
        ">",
        repeat($._node),
        "</choice>",
      ),

    // Match ::= "<match" Attrs ">" When+ Otherwise? "</match>" (§7.3, §11.2).
    match: ($) =>
      seq(
        "<match",
        repeat(choice($._tag_attr, alias($._match_subject, $.cel_attr))),
        ">",
        repeat($.when),
        optional($.otherwise),
        "</match>",
      ),

    // When ::= "<when" Attrs ">" Node* "</when>" (§7.3).
    when: ($) =>
      seq(
        "<when",
        repeat(choice($._tag_attr, $.when_is)),
        ">",
        repeat($._node),
        "</when>",
      ),

    // Otherwise ::= "<otherwise>" Node* "</otherwise>" (§7.3). NO attributes —
    // any attribute on `<otherwise>` is a parse error (§7.3, S10).
    otherwise: ($) =>
      seq("<otherwise", ">", repeat($._node), "</otherwise>"),

    // ---- <when> literal pattern (`is`, §7.3.1) -----------------------------
    // WhenIs ::= "is" "=" '"' WhenPattern '"' — the `<when is="…">` literal
    // pattern. Unlike `test` (a CEL guard ⇒ `cel_attr`), `is` is a plain String
    // whose *content* is a `|`-alternation of literals (enum member / true /
    // false / Number / `unset`, §7.3.1). Given its own node (not the generic
    // `attr` fallthrough) so editors can color each literal. `is` is a keyword
    // only inside `<when …>` — tree-sitter's per-state lexer leaves a speaker /
    // key named `is` elsewhere intact; it is NOT a `cel_key`.
    when_is: ($) => seq($.when_key, "=", $.when_pattern),

    when_key: ($) => "is",

    // WhenPattern ::= Literal ( WS? "|" WS? Literal )* (§7.3.1). The interior is
    // tokenized immediately (like `cel_string`) so a missing close `"` fails on
    // the line rather than swallowing the next.
    when_pattern: ($) =>
      seq(
        '"',
        $.when_literal,
        repeat(seq(token.immediate(/[ \t]*\|[ \t]*/), $.when_literal)),
        token.immediate('"'),
      ),

    // Literal ::= EnumMember | "true" | "false" | Number | NumRange | "unset"
    // (§7.3.1; ranges dsl 0.18.0 §2). NumRange ::= Number ".." Number
    // | Number ".." | ".." Number — inclusive bounds, each a Number (§4.4)
    // that may carry a leading "-" and a decimal part (`-3..-1`, `0.5..1.5`,
    // `..0`, `2..`). The range alternative is listed first so a bound that
    // starts with "-" or ".." lexes as ONE literal; the second captures
    // signed/decimal numerals; the third keeps bare enum-member / true / false
    // / unset identifiers (and the `a|b` shape). Maximal munch picks the
    // longest, so `gold`, `-1` and `1..3` lex exactly as before. Malformed
    // ranges (`..`, `1..2..3`) are the checker's `E-WHEN-RANGE`, not a parse
    // error — this grammar is editor-side only.
    when_literal: ($) =>
      token.immediate(
        /(-?[0-9]+(\.[0-9]+)?)?\.\.(-?[0-9]+(\.[0-9]+)?)?|-?[0-9]+(\.[0-9]+)?|[A-Za-z0-9_][A-Za-z0-9_.-]*/,
      ),

    // ---- timeline (nest, restricted body) ---------------------------------
    // Timeline ::= "<timeline" Attrs? ">" Track+ "</timeline>" (§7.4).
    quest: ($) =>
      seq(
        "<quest",
        repeat($._tag_attr),
        ">",
        repeat(choice($._node, $.reward)),
        "</quest>",
      ),

    // ---- lore entries (nest; dsl 0.19.0 §2–§4) ------------------------------
    // Entry ::= "<entry" Attrs ">" Node* "</entry>". A DOCUMENT TOP-LEVEL
    // declaration of a `kind: lore` document, exactly like `quest` (never a
    // `_node` alternative). The body is the ordinary node stream; which nodes
    // an entry admits (lines, `<match>`, `::set`/`::assert`/`::retract`) is
    // the checker's `E-GRAMMAR-NOT-ADMITTED`, not a parse error. Attributes
    // (`id`/`target`/`category`/`title`/`series`/`order`, CEL `when`) ride the
    // generic `_tag_attr` machinery.
    reward: ($) =>
      seq("<reward", repeat($._tag_attr), "/>"),

    // ---- attributes (§4.5) -------------------------------------------------
    // Attrs ::= "{" ( Attr ( WS Attr )* )? "}"  — the brace-delimited form used
    // by `:line` and `::` directives. Tag attributes reuse `_tag_attr` directly.
    // A `,` between attributes is tolerated (the core attribute scanner skips
    // non-ident separators).
    attrs: ($) => seq("{", repeat(choice($._tag_attr, ",")), "}"),

    // An attribute in any position (brace-form or bare tag attribute). Splitting
    // the CEL-valued keys (`on`/`test`/`when`, §7.3/§8) into their own node lets
    // editor queries reach the CEL sub-tokens (@ref, state-path) inside their
    // value; every other key is a plain String/Ref attribute (§4.5).
    _tag_attr: ($) => choice($.attr, $.cel_attr),

    // Attr ::= Ident "=" String | Ident "=" Ref | Ident  (bare ⇒ true).
    attr: ($) =>
      seq(
        $.key,
        optional(seq("=", choice($.string, $.ref, $.value))),
      ),

    // CelAttr ::= CelKey "=" ( CelString | Ref )  — the CEL-valued attributes
    // `<match subject>`, `<when test>`, `<choice when>` (§7.3, §11.1–11.2). The value
    // is a CEL expression (§8): a double-quoted `CelString` (§4.4) or a bare
    // `@ref` macro (§8.1). Distinct from `attr` so highlight/tag queries can
    // capture the CEL innards (@ref, state-path) rather than an opaque string.
    cel_attr: ($) => seq($.cel_key, "=", choice($.cel_string, $.ref)),

    // CelKey — the reserved attribute keys whose value is CEL (§7.3): `test`
    // is a `<when>` guard, `when` a `<choice>` guard,
    // `visibleWhen` an objective's visibility condition, `rearm` a quest's
    // re-arm condition and `spentBy` a beat's spend condition (dsl 0.27.0 §5).
    // A named node (lexes ahead of the generic `key` on a tie) so editors treat
    // these keys distinctly and know their value is embedded CEL.
    cel_key: ($) =>
      choice("test", "when", "visibleWhen", "done", "start", "fail", "rearm", "spentBy"),

    // `<match subject="…">` (dsl 0.37.0 §3.5) — the match subject is CEL. A
    // `cel_attr` scoped to `<match>` (like `when_is` to `<when>`): `subject` is
    // a keyword only there, so `<track subject="camera">` stays a plain attr.
    _match_subject: ($) =>
      seq(alias("subject", $.cel_key), "=", choice($.cel_string, $.ref)),

    // CelString (§4.4) — a double-quoted CEL expression used as an attribute
    // value. Unlike the opaque `string` token, its interior is *structured* so
    // editor queries can capture the embedded CEL sub-tokens: `@ref` macros
    // (§8.1) and dotted state-`path`s (§9). CEL's own single-quoted string
    // literals (`'blunt'`) are opaque runs (§4.4 quote boundaries respected), so
    // a `@`, letter, or `}` inside `'…'` is content, not a ref/path/terminator.
    // Every interior piece is `token.immediate`, so the value can neither skip
    // whitespace/comments (an `extra`) nor span a newline: a missing closing `"`
    // fails locally instead of swallowing following lines.
    cel_string: ($) =>
      seq(
        '"',
        repeat(
          choice(
            // `@name` / `@name(args)` ref macro (§8.1) — outside CEL strings.
            alias(token.immediate(/@[A-Za-z][A-Za-z0-9_-]*(\([^)\n]*\))?/), $.ref),
            // Dotted state path (§9), e.g. `scene.choices.number`.
            alias(
              token.immediate(/[A-Za-z][A-Za-z0-9_]*(\.[A-Za-z][A-Za-z0-9_]*)+/),
              $.path,
            ),
            // CEL single-quoted string literal — opaque (with `\` escapes).
            $._cel_squote,
            // Bare CEL identifier / keyword (no dot ⇒ not a path), e.g. `in`.
            $._cel_word,
            // Everything else: operators, spaces, digits, brackets, escapes.
            $._cel_sym,
          ),
        ),
        token.immediate('"'),
      ),

    // A CEL single-quoted string literal, consumed whole so its interior is
    // content (§4.4). Backslash escapes; no raw newline.
    _cel_squote: ($) => token.immediate(/'([^'\\\n]|\\[^\n])*'/),

    // A bare CEL identifier/keyword inside a `cel_string` (no `.` ⇒ not a path).
    _cel_word: ($) => token.immediate(/[A-Za-z_][A-Za-z0-9_]*/),

    // Filler inside a `cel_string`: any run that is not the start of a ref,
    // path, word, single-quote literal, or the closing `"` — and never a raw
    // newline (so the value stays single-line). Backslash escapes stay attached.
    _cel_sym: ($) => token.immediate(/([^"'@A-Za-z\r\n\\]|\\[^\n])+/),

    // ---- terminals (§4.4) --------------------------------------------------
    // Ident ::= [A-Za-z][A-Za-z0-9_-]*  (directive/tag name).
    ident: ($) => /[A-Za-z][A-Za-z0-9_-]*/,

    // Attribute key — lexically an Ident; a distinct node name so editors can
    // treat attribute keys and directive names differently.
    key: ($) => /[A-Za-z][A-Za-z0-9_-]*/,

    // Speaker ::= Ident (§7.1) — a character id (incl. reserved narrator/pov).
    // A component's speaker parameter is `@@name` (the `@` marker + `@name`).
    speaker: ($) => /@?[A-Za-z][A-Za-z0-9_-]*/,

    // Bare (unquoted) attribute value — `n=2`, `amount=5`, `rate=1.25`: the
    // core scanner reads `key=` + token to whitespace/terminator as a string.
    value: ($) => /[^ \t\r\n"'@}>,\/][^ \t\r\n"}>,\/]*/,

    // Subscript `[expr]` on a state path (`user.bond[occasion.target]`), in
    // `::set` targets and `{{…}}` interpolations. Opaque, single-line.
    string: ($) => token(/"([^"\\\n]|\\[^\n])*"/),

    // Ref ::= "@" Ident ( "(" CelArgs ")" )?  — bare (unquoted) attribute ref.
    ref: ($) => token(/@[A-Za-z][A-Za-z0-9_-]*(\([^)\n]*\))?/),

    // Path ::= ("scene"|"run"|"user"|"app") ("." Ident)+  (§9). Editor-side we
    // accept any dotted ident path; the checker validates the root + declares.
    path: ($) => token(/[A-Za-z][A-Za-z0-9_]*(\.[A-Za-z][A-Za-z0-9_]*)+/),

    // AssignOp ::= "=" | "+=" | "-=" | "*="  (§7.3.4). A token, not a value.
    text: ($) =>
      repeat1(
        choice($._text_chunk, $._text_special, $.escape, $.interpolation, $.modifier),
      ),

    // A run of literal text: anything but a brace, bracket, colon, backslash,
    // or newline. Stops at those so the longer `{{`/escape/modifier tokens win.
    // `prec(1)` beats the `comment` extra: a `//` or `/*` after an inline `:` /
    // `[` / `{` stays literal text instead of lexing as a trailing comment.
    _text_chunk: ($) => token.immediate(prec(1, /[^{}\[\]:\\\r\n]+/)),

    // A lone punctuation char that opens no interpolation, escape or modifier —
    // literal text (`:` not followed by `name[`/`name{` is ordinary, §3.6).
    _text_special: ($) => token.immediate(/[{}\[\]:\\]/),

    // Escape ::= "\{{" | "\:" | "\[" | "\]" | "\{" | "\}" | "\\" (§7.6, dsl
    // 0.37.0 §3.6). `\{{` is consumed whole (3 chars) so its `{{` never opens
    // an interpolation; `\:` never starts a modifier. An unknown escape is the
    // checker's `E-TEXT-ESCAPE` (here a lone `\` is literal text).
    escape: ($) => token.immediate(/\\\{\{|\\[:\[\]{}\\]/),

    // Modifier ::= ":" Name Span? Attrs? (dsl 0.37.0 §3.6) — `:pause{s=0.5}`,
    // `:speed[text]{rate=1.25}`, `:emphasis[text]`. `modifier_name` (external)
    // is the `:name` head and only matches when `[` or `{` follows, so `Note:`
    // or `12:30` stay ordinary text. Name vocabulary (`pause`/`speed`/the
    // project `textStyle` domain) and attr shape are the checker's
    // `E-TEXT-MODIFIER`.
