tree-sitter-lute/test/corpus/v010.txt
==================
content line (0.2.2 @speaker{}: form, replaces the `:` sigil, foundation C1)
==================
@marina{code="0010" emotion="delighted"}: Mr. Fixer!
---
(source_file
  (line (speaker) (attrs (attr (key) (string)) (attr (key) (string))) (text)))

==================
`:speaker:` is no longer a content line (0.2.2 sigil is `@`, foundation C1)
:error
==================
:marina: Mr. Fixer!
---

==================
content line narrator (no attrs)
==================
@narrator: Venny's again — the coffee shop on the corner.
---
(source_file (line (speaker) (text)))

==================
content line with `as` display-label override
==================
@marina{as="???"}: ...who's there?
---
(source_file (line (speaker) (attrs (attr (key) (string))) (text)))

==================
line comment `//` at start of a body line is trivia
==================
// a line comment
::pause
---
(source_file (comment) (directive (ident)))

==================
mid-Text `//` stays inside opaque text (not a comment)
==================
@narrator: Visit http://example.com now.
---
(source_file (line (speaker) (text)))

==================
interpolation: path + reserved userName in content text
==================
@narrator: You have {{run.coins}} credits, {{userName}}.
---
(source_file
  (line (speaker) (text (interpolation (path)) (interpolation (reserved)))))

==================
interpolation: @ref in content text
==================
@fixer: Trust stands at {{@trustLevel}}.
---
(source_file (line (speaker) (text (interpolation (ref)))))

==================
interpolation: whitespace inside braces is tolerated
==================
@narrator: You have {{ run.coins }} left.
---
(source_file (line (speaker) (text (interpolation (path)))))

==================
interpolation escape `\{{` renders a literal, stays in text
==================
@narrator: Write a literal \{{ like so.
---
(source_file (line (speaker) (text (escape))))

==================
hub with once + exit choices (revisit conversation)
==================
<hub id="chatWithMarina">
  <choice id="askCoffee" text="Ask about the coffee" once>
    @marina: House blend. Bold, like the clientele.
  </choice>
  <choice id="leave" text="Head out" exit>
    @fixer: I'd better get moving.
  </choice>
</hub>
---
(source_file
  (hub
    (attr (key) (string))
    (hub_choice
      (attr (key) (string))
      (attr (key) (string))
      (attr (key))
      (line (speaker) (text)))
    (hub_choice
      (attr (key) (string))
      (attr (key) (string))
      (attr (key))
      (line (speaker) (text)))))

==================
hub choice with when guard beside once flag
==================
<hub id="chat">
  <choice id="askVenny" text="Ask about Venny" when="scene.metVenny" once>
    @marina: He's around here somewhere.
  </choice>
  <choice id="leave" text="Head out" exit>
    @fixer: Later.
  </choice>
</hub>
---
(source_file
  (hub
    (attr (key) (string))
    (hub_choice
      (attr (key) (string))
      (attr (key) (string))
      (cel_attr (cel_key) (cel_string (path)))
      (attr (key))
      (line (speaker) (text)))
    (hub_choice
      (attr (key) (string))
      (attr (key) (string))
      (attr (key))
      (line (speaker) (text)))))

==================
hub return block (dsl 0.28.0)
==================
<hub id="lamp">
  <return>
    @narrator: The lamp room again.
  </return>
  <choice id="leave" text="Leave" exit>
    @narrator: Out.
  </choice>
</hub>
---
(source_file
  (hub
    (attr (key) (string))
    (hub_return
      (line (speaker) (text)))
    (hub_choice
      (attr (key) (string))
      (attr (key) (string))
      (attr (key))
      (line (speaker) (text)))))

==================
when is literal-pattern alternation (structured when_pattern)
==================
<match subject="scene.emotion">
  <when is="blunt | curt">
    @narrator: hi
  </when>
  <otherwise>
    @narrator: bye
  </otherwise>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when
      (when_is (when_key) (when_pattern (when_literal) (when_literal)))
      (line (speaker) (text)))
    (otherwise (line (speaker) (text)))))

==================
when is single literal plus test guard (pattern AND guard)
==================
<match subject="scene.emotion">
  <when is="delighted" test="$ != 'staged'">
    @narrator: hi
  </when>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (cel_attr (cel_key) (cel_string))
      (line (speaker) (text)))))

==================
otherwise takes no attributes (tightened)
==================
<match subject="scene.x">
  <when test="@fond">
    @narrator: yes
  </when>
  <otherwise>
    @narrator: no
  </otherwise>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when (cel_attr (cel_key) (cel_string (ref))) (line (speaker) (text)))
    (otherwise (line (speaker) (text)))))

==================
when is signed-number literal (leading minus, structured when_pattern)
==================
<match subject="scene.hp">
  <when is="-1">
    @narrator: down
  </when>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))))

==================
when is numeric range literals (each shape is one when_literal, dsl 0.18.0)
==================
<match subject="scene.hp">
  <when is="2..">
    @narrator: a
  </when>
  <when is="..0">
    @narrator: b
  </when>
  <when is="1..3">
    @narrator: c
  </when>
  <when is="-3..-1">
    @narrator: d
  </when>
  <when is="0.5..1.5">
    @narrator: e
  </when>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))
    (when
      (when_is (when_key) (when_pattern (when_literal)))
      (line (speaker) (text)))))

==================
when is range and enum literals mixed in one alternation (dsl 0.18.0)
==================
<match subject="scene.hp">
  <when is="..0 | gold | 5..">
    @narrator: mixed
  </when>
</match>
---
(source_file
  (match
    (cel_attr (cel_key) (cel_string (path)))
    (when
      (when_is (when_key) (when_pattern (when_literal) (when_literal) (when_literal)))
      (line (speaker) (text)))))

==================
choice persist sugar: into= run-path target (0.1.0, renamed from 0.0.1 as=)
==================
<branch id="rest">
  <choice id="couch" text="Offer the couch" persist="run" into="run.metHelpfully" value="warm">
    @fixer: Take the couch — you look exhausted.
  </choice>
</branch>
---
(source_file
  (branch
    (attr (key) (string))
    (choice
      (attr (key) (string))
      (attr (key) (string))
      (attr (key) (string))
      (attr (key) (string))
      (attr (key) (string))
      (line (speaker) (text)))))
